# st_arm

./: README.md
experiment_setup/collada/: peg-in-hole.dae
field_pkgs/: CMakeLists.txt  package.xml
field_pkgs/launch/: field.launch
field_pkgs/meshes/step/: Peg.step
field_pkgs/meshes/stl/: Peg.stl
field_pkgs/models/box/: model.config  model.sdf
field_pkgs/models/desk/: model.config  model.sdf
field_pkgs/models/experiment_description/meshes/collada/: peg_in_hole.dae
field_pkgs/models/experiment_description/meshes/stl/: Desk.stl  Peg.stl  Sphere.stl  Square.stl  Triangle.stl
field_pkgs/src/: factory.cc
field_pkgs/worlds/: field.world  field033.world
other/: memo
rbq3/rbq3_description/: CMakeLists.txt  package.xml
rbq3/rbq3_description/config/: joint_names_rbq3_description.yaml  rbq3.config  rbq3.rviz
rbq3/rbq3_description/launch/: display.launch  gazebo.launch
rbq3/rbq3_description/meshes/: calf.stl  thigh.dae  trunk1.dae  trunk2.dae
rbq3/rbq3_description/scripts/: update_gazebo_model
rbq3/rbq3_description/urdf/: rbq3.sdf  rbq3.urdf  rbq3_colorized.sdf
st_arm_control/: CMakeLists.txt  package.xml
st_arm_control/include/: callback.h  dynamics.h  dynamixel.h  motor_controller.h  rmd_can.h  rmd_motor.h  rt_utils.h  shared_memory.h  spi2can.h
st_arm_control/launch/: jinu_manipulator_controller.launch  st_arm_control.launch
st_arm_control/scripts/: create_udev_rules  update_spi_rules
st_arm_control/src/: callback.cpp  dynamics.cpp  dynamixel.cpp  main.cpp  motor_controller.cpp  motor_controller_.cpp  rmd_can.cpp  rmd_motor.cpp  rt_utils.cpp  spi2can.cpp
st_arm_description/: CMakeLists.txt  package.xml
st_arm_description/config/: joint_names_st_arm_description.yaml
st_arm_description/launch/: display.launch  gazebo.launch
st_arm_description/meshes/step/: elbow_pitch_link.STEP  gripper_left_link.STEP  gripper_right_link.STEP  wrist_pitch_link.STEP  wrist_roll_link.STEP
st_arm_description/meshes/stl/: gripper_left_link.STL  wrist_roll_link.STL
st_arm_description/meshes/stl_2.1/: elbow_pitch_link.STL  gripper_right_link.STL  wrist_pitch_link.STL
st_arm_description/scripts/: update_gazebo_model
st_arm_description/urdf/: st_arm.sdf  st_arm.urdf  st_arm_2.1.sdf  st_arm_colored.sdf
st_arm_gazebo/: CMakeLists.txt  package.xml
st_arm_gazebo/launch/: gazebo.launch
st_arm_gazebo/worlds/: empty.world  rbq3_st_arm_gazebo.world  st_arm_gazebo.world
st_arm_libs/: CMakeLists copy.txt  CMakeLists.txt  package.xml
st_arm_libs/include/: ostrich.h  plugin.h  st_arm_plugin.h
st_arm_libs/src/: ostrich.cc  plugin.cc  st_arm_plugin.cc
st_arm_libs/temp/: Kinematics.cs  QuadLegKinematics.cs
