<?xml version="1.0"?>
<package format="2">
  <name>st_arm_gazebo</name>
  <version>2.1.1</version>

  <description>Gazebo configurations package for ST-Arm</description>

  <author>Gurban</author>

  <maintainer email="palwanishan@gmail.com">Gurban</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
