<?xml version="1.0"?>
<package format="2">
  <name>rbq3_description</name>
  <version>2.1.1</version>
  
  <description>
    <p>URDF Description package for rbq3_description</p>
    <p>This package contains configuration data, 3D models and launch files for rbq3_description robot</p>
  </description>

  <author>Gurban</author>

  <maintainer email="palwanishan@gmail.com">Gurban</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <export>
    <architecture_independent />
  </export>

</package>